--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li class="list-item">PHP</li>
 
         </ul>
+        <h2>Other languages</h2>
        
      </div>
 <script src="script.js">
