--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         </ul>
         <h2>Other languages</h2>
+        <button class="btn" id="btn">SUBMIT</button>
        
      </div>
 <script src="script.js">
