--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         <button class="btn" id="btn">SUBMIT</button>
        
      </div>
+     <div class="technology">
+        <h1 class="title">Trending Technology</h1>
+        <ul>
+            <li>Internet Of Things</li>
+            <li>Quantum Computing</li>
+            <li>Data Science</li>
+            <li>Cybersecurity</li>
+            <li>Blockchain</li>
+        </ul>
+
+     </div>
+     <button id="verify">VERIFY</button>
+     <p class="trends" style="display: none;">Hello user thank you for checking 
+        trebding technology, the world is rapid changing 
+        you have to stay update.
+     </p>
 <script src="script.js">
 
 </script>    
