--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
      </div>
      <button id="verify">VERIFY</button>
-     <p class="trends" style="display: none;">Hello user thank you for checking 
+     <p class="hidden" id="trending" style="display: none;">Hello user thank you for checking 
         trebding technology, the world is rapid changing 
         you have to stay update.
      </p>
